--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="section__text">
         <h1 class="title">Olzhas Molot</h1>
- <p class="section__text__p2">Netrunner at <a href="https://www.linkedin.com/company/arasaka-corporation/" class="arasaka-link">Arasaka</a></p>
+ <p class="section__text__p2">19yo / Netrunner at <a href="https://www.linkedin.com/company/arasaka-corporation/" class="arasaka-link">Arasaka</a></p>
         <div class="btn-container">
         </div>
         <div id="socials-container">
